# carlev-thoughts-to-post-ai-agent

./: .README.txt  .gitignore  README.md  docker-compose.yml  implementation_plan.md  mock_backend.py  start-dev-services.ps1  start-dev.bat  start-kafka-wsl-and-thoughts2-post.sh  start-wsl.ps1  stop-dev-services.ps1  stop-dev.bat  stop-thoughts-to-post-pods.sh  test-docker-builds.sh  verify_auth_v2.spec.ts  verify_frontend.py  verify_ui_v2.py  verify_ui_v3.py  walkthrough.md
carlev-api-service/: APPLICATION_PROPERTIES_EXAMPLES.md  COPY_PASTE_COMMANDS.md  EXECUTION_CHECKLIST.md  FILE_INDEX.md  MONGODB_SETUP_AND_API_TESTING.md  MONGODB_TROUBLESHOOTING.md  QUICK_REFERENCE.md  QUICK_START.md  README.ME  SOLUTION_GUIDE.md  build.gradle  diagnose-mongodb.ps1  sample-event-request.json  settings.gradle  setup-mongodb-auth.bat  test-api.bat  (+1 more)
thoughts-to-post-ai-agent/: .env.example  .gitignore  Dockerfile  OLLAMA_SETUP_GUIDE.md  OLLAMA_USAGE_EXAMPLES.py  QUICK_REFERENCE.md  README.md  SETUP_CHECKLIST.md  pyproject.toml  test_ollama.ps1
thoughts-to-post-ai-agent/src/: __init__.py  config.py  main.py
thoughts-to-post-ai-agent/src/agents/: __init__.py  content_enrichment_agent.py  image_generation_agent.py  search_agent.py  video_generation_agent.py
thoughts-to-post-ai-agent/src/kafka/: __init__.py  consumer.py  producer.py
thoughts-to-post-ai-agent/src/memory/: __init__.py  checkpoint.py
thoughts-to-post-ai-agent/src/models/: __init__.py  dataclasses.py
thoughts-to-post-ai-agent/tests/: reproduce_bug.py  test_content_enrichment_agent.py  test_search_agent.py
(+124 files in other folders)
