[tool.poetry]
name = "thoughts-to-post-ai-agent"
version = "0.1.0"
description = "AI Agent for enriching thoughts and generating social media content using LangChain and Ollama"
authors = ["Carlev <carlev@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.0"
langchain-ollama = "^0.2.0"
langchain-core = "^0.3.0"
langgraph = "^0.2.0"
kafka-python-ng = "^2.2.2"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
pillow = "^10.4.0"
aiohttp = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
black = "^24.0.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.main:main"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
